client/src/styles/calendar.css
.react-calendar {
  width: 300px;
  max-width: 100%;
  font-family: "DM Sans", sans-serif;
  line-height: 1.125em;
}
.react-calendar--doubleView {
  width: 700px;
}
.react-calendar--doubleView .react-calendar__viewContainer {
  display: flex;
  margin: -0.5em;
}
.react-calendar--doubleView .react-calendar__viewContainer > * {
  width: 50%;
  margin: 0.5em;
}
.react-calendar,
.react-calendar *,
.react-calendar *:before,
.react-calendar *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.react-calendar button {
  margin: 0;
  border: 0;
  outline: none;
}
.react-calendar button:enabled:hover {
  cursor: pointer;
}
.react-calendar__navigation {
    display: flex;
    flex-direction: row;
    padding-bottom: 18px;
}
.react-calendar__navigation button {
  min-width: 44px;
  background: none;
  @apply py-2 text-sm
}
.react-calendar__navigation button:enabled:hover,
.react-calendar__navigation button:enabled:focus {
    @apply bg-button-primary text-button-accent rounded-full
}
.react-calendar__navigation button[disabled] {
  background-color: #f0f0f0;
}
.react-calendar__month-view__weekdays {
  text-align: center;
  font-weight: bold;
  font-size: 0.75em;
}
.react-calendar__month-view__weekdays__weekday {
  padding: 0.5em;
}
.react-calendar__month-view__weekNumbers {
  font-weight: bold;
}

.react-calendar__month-view__days__day--neighboringMonth {
  @apply text-typography-secondary
}
.react-calendar__year-view .react-calendar__tile,
.react-calendar__decade-view .react-calendar__tile,
.react-calendar__century-view .react-calendar__tile {
  
}
.react-calendar__tile {
  @apply h-[45px] text-sm font-medium
}
.react-calendar__tile:disabled {
  background-color: #f0f0f0;
}
.react-calendar__tile:enabled:hover,
.react-calendar__tile:enabled:focus {
    @apply bg-button-primary text-button-accent rounded-full transition-all duration-300
}
.react-calendar__tile--now {
  @apply bg-button-accent text-white rounded-full
}
.react-calendar__tile--now:enabled:hover,
.react-calendar__tile--now:enabled:focus {
    @apply bg-button-primary text-button-accent rounded-full
}
.react-calendar__tile--hasActive {
    @apply bg-button-primary text-button-accent rounded-full
}
.react-calendar__tile--hasActive:enabled:hover,
.react-calendar__tile--hasActive:enabled:focus {
    @apply bg-button-primary text-button-accent rounded-full

}
.react-calendar__tile--active {
    @apply bg-button-primary text-button-accent rounded-full
}
.react-calendar__tile--active:enabled:hover,
.react-calendar__tile--active:enabled:focus {
    @apply bg-button-primary text-button-accent rounded-full
}
.react-calendar--selectRange .react-calendar__tile--hover {
  background-color: #a80c0c;
}

.custom-marker {
  @apply text-button-accent /* Default color */
}

/* When the tile is the current date (today) */
.react-calendar__tile--now .custom-marker {
  @apply text-white
}
.react-calendar__tile--now:enabled:hover .custom-marker,
.react-calendar__tile--now:enabled:focus .custom-marker {
  @apply text-button-accent
}
/* When the tile is active (selected) */
.react-calendar__tile--active .custom-marker {
  @apply text-button-accent; /* Color for active (selected) */
}

